--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3147,7 +3147,7 @@ tr>td {
 
     #links a, #links button {
         margin: 0px 12px 0 0;
-        font-size: .65rem;
+        font-size: .8rem;
         border-bottom: 2px solid #7d2626;
         border-radius: 2px;
         filter: brightness(2);
@@ -3183,11 +3183,20 @@ tr>td {
     }
 
     #speechTitle {
-        font-size: 150%;
+        font-size: .75rem;
     }
 
-    .type p {
-        font-size: 60%;
+    .type {
+        font-size: .7rem;
+    }
+
+    .type h4 {
+        font-size: .6rem;
+        margin: 5px;
+    }
+
+    .type p, .type ol {
+        font-size: .5rem;
     }
 
     .type button {
@@ -3215,7 +3224,7 @@ tr>td {
     }
 
     #offersDiv {
-        height: 43vh;
+        height: 39.8vh;
         order: 3;
         width: 23%;
     }
@@ -3237,7 +3246,8 @@ tr>td {
     }
 
     tr>th {
-        font-size: 55%;
+        font-size: .5rem;
+        width: auto;
     }
 
     input[type="radio"] {
@@ -3866,7 +3876,7 @@ tr>td {
 }
 
 /* Galaxy Fold */
-@media screen and (max-width:700px) and (max-height:300px) {
+@media screen and (max-width:890px) and (max-height:350px) {
     nav {
         height: 15vh;
         border-bottom: 2px solid teal;
@@ -3878,12 +3888,14 @@ tr>td {
     }
 
     #ship {
-        left: 55px;
-        top: -25px;
+        left: 38px;
+        top: -51px;
+        width: 300px;
+        height: 150px;
     }
 
     #title {
-        width: 70%;
+        width: 70.5%;
         border-radius: 3px;
         margin: 22px 2.3% 0px auto;
     }
@@ -3902,15 +3914,34 @@ tr>td {
     }
 
     #titleDiv {
-        font-size: 0.6rem;
-        margin: -2px;
+        font-size: 0.5rem;
+        margin: 0px;
+    }
+    
+    #speechTitle {
+        font-size: 0.7rem;
+        margin: 5px auto 0px;
     }
 
-    .type p {
-        font-size: 83%;
+    .type {
+        font-size: .5rem;
+        padding: 5px;
+    }
+
+    .type p, .type ol {
+        font-size: .4rem;
     }
 
     #switchBtn {
+        height: 20px;
+    }
+
+    #rewind, #forward {
+        width: 48%;
+        background: black;
+        color: white;
+        border: 1px solid teal;
+        font-size: 1rem;
         height: 20px;
     }
 
@@ -3948,7 +3979,7 @@ tr>td {
     }
 
     #offersDiv {
-        height: 48vh;
+        height: 41.5vh;
         border-radius: 3px;
     }
 
@@ -4227,7 +4258,7 @@ tr>td {
     }
 
     #title {
-        margin: 40px auto 0px auto;
+        margin: 35px auto 0px auto;
         width: 95%;
     }
 
@@ -4258,6 +4289,10 @@ tr>td {
         z-index: 1;
     }
 
+    #carousel {
+        height: 30vh;
+    }
+
     .type {
         color: white;
         padding-bottom: 100px;
@@ -4275,7 +4310,7 @@ tr>td {
         order: 3;
         width: 45%;
         padding: 3px;
-        height: 51%;
+        height: 54.3%;
         margin: 0px auto;
         border-radius: 3px;
         border: 1px solid teal;
@@ -4285,8 +4320,13 @@ tr>td {
         font-size: 1.2rem;
     }
 
-    .type p {
-        font-size: .7rem;
+    .type h4 {
+        font-size: .9rem;
+        margin: 0px 5px 10px;
+    }
+
+    .type p, .type ol {
+        font-size: .67rem;
     }
 
     #switchBtn {
@@ -4944,7 +4984,7 @@ tr>td {
 }
 
 /* Galaxy Fold */
-@media screen and (max-width:300px) and (max-height:700px) {
+@media screen and (max-width:350px) and (max-height:890px) {
 
     body {
         overflow: auto;
@@ -4961,18 +5001,19 @@ tr>td {
     #links a, #links button {
         margin: 5px 0 10px 0;
         border-radius: 4px;
-        font-size: 1.2vmax;
+        font-size: 0.6rem;
         font-weight: 600;
-        border: 1px solid;
+        border: none;
         padding: 4px 2px;
         filter: brightness(1.3);
-        box-shadow: -2px -2px 1px #7d7b7b;
+        box-shadow: none;
+        border-bottom: 3px solid red;
     }
 
     #syllabus {
         width: 90%;
         padding: 0;
-        margin: 20px auto;
+        margin: 10px auto;
     }
 
     #syllabus div {
@@ -4981,6 +5022,15 @@ tr>td {
         width: 40%;
         border: 1px solid teal;
         border-radius: 3px;
+    }
+
+    #offersDiv {
+        width: 80%;
+        margin: 0px auto;
+        order: 1;
+        border-radius: 3px;
+        border: 2px solid silver;
+        height: 42vh;
     }
 
     #class35, #class65, #class300, #class550, #class1000 {
@@ -4994,6 +5044,11 @@ tr>td {
     tr>th {
         width: 30%;
         font-size: .9rem;
+    }
+
+    input[type="radio"] {
+        height: 1.5vh;
+        width: 30%;
     }
 
     #scheduleBtn {
@@ -5014,6 +5069,10 @@ tr>td {
         right: 5%;
         top: 5vh;
         font-size: 3rem;
+    }
+
+    .type p, .type ol {
+        font-size: .8rem;
     }
 
 }
