--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -292,7 +292,6 @@ nav {
     color: white;
 }
 
-
 main {
     display: flex;
     justify-content: space-between;
@@ -429,6 +428,12 @@ main::-webkit-scrollbar {
     align-content: space-around;
 }
 
+#offersDiv h4 {
+    margin: 0;
+    font-size: 1rem;
+    margin-top: 5px;
+}
+
 #class35, #class65, #class300, #class550, #class1000 {
     text-align: center;
     font-size: 70%;
@@ -497,7 +502,6 @@ tr>td {
 .class550 {
     accent-color: #dc5e00;
 }
-
 
 .class1000 {
     accent-color: #5c0035;
@@ -581,7 +585,6 @@ tr>td {
     height: fit-content;
     width: 90%;
 }
-
 
 .myModal {
     position: absolute;
@@ -3560,7 +3563,6 @@ tr>td {
 /* iPhone SE */
 @media screen and (max-width:700px) and (max-height:400px) {
 
-
     body {
         height: 99%;
     }
@@ -3740,7 +3742,7 @@ tr>td {
 
     #title {
         margin: 30px 2.3% 0px auto;
-        width: 70%;
+        width: 68.8%;
         border-radius: 5px;
     }
 
@@ -3759,6 +3761,12 @@ tr>td {
 
     #speechTitle {
         font-size: .7rem;
+    }
+
+    .type {
+        font-size: .6rem;
+        margin-top: 5px;
+        padding: 5px;
     }
 
     .type h4 {
@@ -3804,7 +3812,7 @@ tr>td {
     #offersDiv {
         order: 3;
         width: 23%;
-        height: 49vh;
+        height: 54.5vh;
         border-radius: 5px;
     }
 
@@ -3833,7 +3841,7 @@ tr>td {
     }
 
     tr>td {
-        width: 10%;
+        width: 12%;
         padding: 0;
     }
 
