--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2345,6 +2345,306 @@ tr>td {
 
 }
 
+/* iPhone 16 Pro Max */
+@media screen and (max-width:960px) and (max-height:445px) {
+
+    #logoSvg {
+        top: -3px;
+        left: -120px;
+        width: 340px;
+        height: 150px;
+        transform: rotate(-2deg);
+    }
+
+    #ship {
+        top: -62px;
+        left: 30px;
+        width: 400px;
+        height: 200px;
+        /* display: none; */
+    }
+
+    #asteroid {
+        animation: asteroid 60s infinite;
+    }
+
+    @keyframes asteroid {
+        0% {
+            opacity: 1;
+            left: 340px;
+            top: -14px;
+            z-index: 3;
+            width: 50px;
+        }
+
+        11% {
+            opacity: 1;
+            left: -230px;
+            top: 150px;
+            z-index: 3;
+            width: 50px;
+        }
+
+        12% {
+            opacity: 0;
+            left: -230px;
+            z-index: 3;
+            top: 150px;
+            width: 50px;
+        }
+
+        20% {
+            opacity: 0;
+            top: -150px;
+            left: 500px;
+        }
+
+        20.9% {
+            opacity: 1;
+            top: -150px;
+            left: 500px;
+            z-index: 3;
+            width: 100px;
+        }
+
+        31% {
+            opacity: 1;
+            left: -230px;
+            top: 80px;
+            z-index: 3;
+            width: 100px;
+        }
+
+        32% {
+            opacity: 0;
+            left: -230px;
+            top: 100px;
+            z-index: 3;
+            width: 150px;
+        }
+
+        40% {
+            opacity: 0;
+            left: 350px;
+            top: 20px;
+            width: 25px;
+        }
+
+        40.1% {
+            opacity: 1;
+            left: 350px;
+            top: 20px;
+            width: 25px;
+        }
+
+        50% {
+            opacity: 1;
+            left: -250px;
+            top: 250px;
+            width: 25px;
+        }
+
+        50.1% {
+            opacity: 0;
+            left: -250px;
+            top: 250px;
+            width: 25px;
+        }
+
+        51% {
+            opacity: 0;
+            left: 250px;
+            top: -20px;
+            z-index: 2;
+            width: 25px;
+        }
+
+        51.1% {
+            opacity: 1;
+            left: 250px;
+            top: -20px;
+            z-index: 2;
+            width: 25px;
+        }
+
+        100% {
+            opacity: 1;
+            left: -250px;
+            top: 105px;
+            z-index: 2;
+            width: 25px;
+        }
+
+
+    }
+
+    #links a, #links button {
+        margin: 0px 25px 0 0;
+        font-size: 1rem;
+    }
+
+    nav {
+        height: 15vh;
+        border-bottom: 5px solid teal;
+    }
+
+    #title {
+        border-radius: 5px;
+        margin: 15px 20px 0 auto;
+        width: 68%;
+    }
+
+    #title h1 {
+        padding: 5px;
+    }
+
+    #syllabus {
+        justify-content: space-between;
+        margin: 0 60px 0 auto;
+        width: 55%;
+    }
+
+    #syllabus div {
+        border: 5px solid teal;
+        border-radius: 10px;
+        padding: 0 5px 0 20px;
+        background: black;
+        margin: 0px;
+        color: white;
+        font-size: 90%;
+        width: 35%;
+    }
+
+    #syllabus h3 {
+        font-size: 20px;
+        margin: 5px 0 10px -10px;
+    }
+
+    main {
+        flex-wrap: wrap;
+        margin: 0 auto;
+    }
+
+    #typeDiv {
+        order: 1;
+        width: 25%;
+        margin-top: 0;
+        padding-bottom: 70px;
+        height: 40vh;
+        border-radius: 5px;
+    }
+
+    #speechTitle {
+        font-size: 1rem;
+    }
+
+    .type {
+        padding: 0;
+    }
+
+    .type h4 {
+        font-size: 0.8rem;
+        margin: 5px;
+    }
+
+    .type p, .type ol {
+        font-size: .6rem;
+        margin: 5px;
+    }
+
+    .type button {
+        padding: 2px 5px;
+        border-radius: 5px;
+        font-size: 80%;
+    }
+
+    #switchBtn {
+        position: absolute;
+        bottom: 5px;
+        height: 30px;
+        overflow: hidden;
+        display: flex;
+        width: 90%;
+        left: 5%;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    #carousel {
+        width: 45%;
+        order: 1;
+        height: 58vh;
+        margin-bottom: 0;
+        border-radius: 5px;
+    }
+
+    #offersDiv {
+        order: 3;
+        width: 23%;
+        height: 56vh;
+        border-radius: 5px;
+        padding: 5px;
+    }
+
+    #offersDiv h2 {
+        font-size: 1.5rem;
+        margin: 0 auto;
+    }
+
+    #class35, #class65, #class300, #class550, #class1000 {
+        box-shadow: -2px -2px 1px silver;
+        font-size: 60%;
+        display: flex;
+        justify-content: center;
+        font-weight: 600;
+        width: 17%;
+        height: 8%;
+        border-radius: 3px;
+        margin-bottom: 5px;
+        margin: 5px 0px 5px;
+    }
+
+    tr th {
+        font-size: 75%;
+    }
+
+    tr td {
+        width: 10%;
+    }
+
+    input[type="radio"] {
+        width: 30%;
+        height: 11.8px;
+    }
+
+    #scheduleBtnDiv {
+        width: 90%;
+        margin: 0px auto;
+    }
+
+    #scheduleBtn {
+        height: 2rem;
+        font-size: 1rem;
+        border-radius: 3px;
+    }
+
+    .modal-content {
+        height: 100vh;
+        width: 60%;
+        padding: 5% 20%;
+        margin: 0;
+    }
+
+    .close {
+        right: 20px;
+    }
+
+    .calendly-inline-widget {
+        height: 80vh !important;
+        ;
+    }
+}
+
 /* Surface Pro 7 */
 @media screen and (max-width:950px) and (max-height:1400px) {
     nav {
@@ -2767,7 +3067,7 @@ tr>td {
     }
 }
 
-/* iPhone Pro Max */
+/* iPhone 15 Pro Max */
 @media screen and (max-width:935px) and (max-height:435px) {
 
     #speechTitle {
@@ -4901,7 +5201,127 @@ tr>td {
     }
 }
 
-/* iPhone 12 Pro Max */
+/* iPhone 16 Pro Max */
+@media screen and (max-width:445px) and (max-height:960px) {
+    nav {
+        background: black;
+        height: auto;
+        flex-wrap: wrap;
+        position: unset;
+        border-bottom: 2px solid darkgray;
+        /* border-radius: 16px; */
+    }
+
+    #title {
+        display: none;
+    }
+
+    #syllabus {
+        margin: 0px auto;
+        width: 80%;
+    }
+
+    #logoSvg, #asteroid {
+        display: none;
+    }
+
+    #co {
+        width: 100%;
+        color: lightgray;
+        margin: 10px auto 0;
+        padding: 5px;
+        text-align: center;
+        display: block;
+        font-size: 1.65rem;
+        font-style: italic;
+        text-shadow: 0px 0px 1px black, -1px -1px 1px silver;
+    }
+
+    #links {
+        display: flex;
+        justify-content: space-between;
+        width: 85%;
+        padding: 7px 5px;
+        margin: 0 auto;
+    }
+
+    #syllabus {
+        margin: 0px auto;
+        width: 95%;
+    }
+
+    #syllabus div {
+        border-radius: 10px;
+        font-size: 0.5rem;
+    }
+
+    #links a, #links button {
+        margin: 0px 12px 0 0;
+        font-size: 0.6rem;
+        border-bottom: 2px solid #7d2626;
+        border-radius: 2px;
+        filter: brightness(2);
+    }
+
+    #ship, #speed1, #speed2, #speed3 {
+        display: none;
+    }
+
+    main {
+        height: 100vh;
+    }
+
+    #offersDiv {
+        width: 90%;
+        margin: 10px auto;
+        order: 1;
+        border-radius: 3px;
+        border: 2px solid silver;
+        height: fit-content;
+    }
+
+    #carousel {
+        width: 98%;
+        order: 2;
+        height: 32.5vh;
+        border-radius: 5px;
+        margin-bottom: 35px;
+        margin: 20px auto;
+    }
+
+    #carousel img {
+        width: 100%;
+        height: 100%;
+        margin: auto;
+        overflow: hidden;
+    }
+
+    #scheduleBtn {
+        padding: 0px 10px;
+        margin-top: 5px;
+    }
+
+    #typeDiv {
+        width: 95%;
+        margin: 10px auto 100px;
+        order: 3;
+        border: 2px solid silver;
+        border-radius: 0px;
+        padding: 5px;
+        height: 45vh;
+    }
+
+    .type p {
+        font-size: 1rem;
+        margin: 10px;
+    }
+
+    .type ol {
+        font-size: .9rem;
+    }
+}
+
+/* iPhone 15 Pro Max */
 @media screen and (max-width:435px) and (max-height:935px) {
     nav {
         background: black;
@@ -4957,7 +5377,7 @@ tr>td {
 
     #links a, #links button {
         margin: 0px 12px 0 0;
-        font-size: 0.69rem;
+        font-size: 0.6rem;
         border-bottom: 2px solid #7d2626;
         border-radius: 2px;
         filter: brightness(2);
